nestjs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestjs-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nestjs-app
  template:
    metadata:
      labels:
        app: nestjs-app
    spec:
      containers:
      - name: nestjs-app
        image: stiksans/nestjs-app:latest
        ports:
        - containerPort: 4500
---
apiVersion: v1
kind: Service
metadata:
  name: nestjs-service
spec:
  ports:
  - port: 4500
    targetPort: 4500
  selector:
    app: nestjs-app
